syntax = "proto3";

// 생성될 Scala 코드의 패키지 경로
option java_package = "com.example.grpc";

service GreeterService {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}